--- a/package.json
+++ b/package.json
@@ -3,10 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "postcss": { "plugins": { "autoprefixer": {} } },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
   "scripts": {
     "serve": "webpack serve --open --mode development",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
+    "prettier": "npx prettier --write .",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
+    "stylelint": "stylelint \"src/**/*.scss\" --custom-syntax postcss-scss",
+    "stylelint:fix": "stylelint \"src/**/*.scss\" --fix --custom-syntax postcss-scss",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,8 +33,14 @@
   "devDependencies": {
     "@babel/core": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
+    "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
+    "eslint": "^8.36.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-pug": "^1.2.5",
     "filemanager-webpack-plugin": "^8.0.0",
     "html-webpack-plugin": "^5.5.0",
     "image-minimizer-webpack-plugin": "^3.8.2",
@@ -36,14 +52,24 @@
     "mini-css-extract-plugin": "^2.7.5",
     "postcss-loader": "^7.1.0",
     "postcss-preset-env": "^8.0.1",
+    "postcss-scss": "^4.0.6",
+    "prettier": "2.8.5",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
     "sass": "^1.59.3",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.2",
+    "stylelint": "^14.16.1",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-order": "^6.0.3",
+    "stylelint-scss": "^4.5.0",
     "svgo": "^3.0.2",
     "webpack": "^5.76.2",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.12.0"
+  },
+  "dependencies": {
+    "jquery": "^3.6.4"
   }
 }
